# emospeech

./: .gitignore  Dockerfile  README.md  download_data.py  download_data.sh  google_colab.ipynb  pyproject.toml  requirements.txt
config/: config.py
src/models/acoustic_model/discriminator/: loss.py
src/models/acoustic_model/fastspeech/: lightning_model.py
src/preprocess/: preprocess.py
src/scripts/: inference.py  test.py  train.py
src/utils/: vocoder_utils.py
