[project]
name = "emospeech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdown>=4.7.1",
    "librosa>=0.9.2",
    "lightning>=2.0.3",
    "loguru>=0.6.0",
    "matplotlib>=3.6.3",
    "numpy>=1.23.5",
    "opensmile>=2.4.2",
    "pandas>=1.5.1",
    "pillow>=9.5.0",
    #"pip-system-certs>=4.0",
    "pyrallis>=0.3.1",
    "pyworld>=0.3.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.1.2",
    "scipy>=1.9.3",
    "seaborn>=0.12.2",
    "soundfile>=0.12.1",
    "tgt>=1.4.4",
    "torch>=2.8.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.64.1",
    "wandb>=0.16",
    "torchcodec>=0.11.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130" },
]
torchaudio = [
    { index = "pytorch-cu130" },
]
torchvision = [
    { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
#default = true
explicit = true
