[project]
name = "emospeech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdown>=4.7.1",
    "librosa>=0.9.2",
    "lightning>=2.0.3",
    "loguru>=0.6.0",
    "matplotlib>=3.6.3",
    "numpy>=1.23.5",
    "opensmile>=2.4.2",
    "pandas>=1.5.1",
    "pillow>=9.5.0",
    "pyrallis>=0.3.1",
    "pyworld>=0.3.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.1.2",
    "scipy>=1.9.3",
    "seaborn>=0.12.2",
    "soundfile>=0.12.1",
    "tgt>=1.4.4",
    "torchmetrics>=0.11.4",
    "tqdm>=4.64.1",
    "wandb>=0.16",
]


[project.optional-dependencies]
cpu = [
  "torch>=2.11.0",
  "torchvision>=0.24.1",
  "torchaudio>=2.11.0",
  "torchcodec>=0.9.1",
]
gpu = [
  "torch>=2.11.0",
  "torchvision>=0.24.1",
  "torchaudio>=2.11.0",
  "torchcodec>=0.9.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-gpu", extra = "gpu" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-gpu", extra = "gpu" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-gpu", extra = "gpu" },
]
torchcodec = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-gpu", extra = "gpu", marker = "sys_platform == 'linux'" },
  { index = "Pypi", extra = "gpu", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "Pypi"
url = "https://pypi.org/simple"
explicit = true
